# tb30k

./: README.md  main.py  pyproject.toml
backend/: requirements.txt
backend/app/: __init__.py  main.py  models.py  schemas.py
backend/app/routes/: army_builder.py  auth.py  campaign.py
companion/: __init__.py  __main__.py  data_io.py  models.py  resources.qrc  validators.py
companion/gui/: army_list_view.py  faction_unit_tree.py  main_window.py  rule_search_panel.py  splash.py  turn_order_bar.py  unit_detail_panel.py
companion/gui/editors/: data_editor.py
data/: game_modes.json  schema.json
data/heresy2e/: rules.json  turn_order.json  units.json  weapons.json
data/wh40k5e/: units.json  weapons.json
